--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script type="text/javascript" src="js/lib/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="css/todos.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/472b290801.js"></script>
     <title>ToDo List</title>
   </head>
   <body>
+    <div id="container">
+      <h1>ToDo List<i class="fas fa-pencil-alt"></i></h1>
+      <input type="text" placeholder="Add New ToDo" />
+
+      <ul>
+        <li>
+          <span><i class="far fa-trash-alt"></i></span> Go to store
+        </li>
+        <li>
+          <span><i class="far fa-trash-alt"></i></span> Visit Gandalf
+        </li>
+        <li>
+          <span><i class="far fa-trash-alt"></i></span> Play Golf
+        </li>
+        <li>
+          <span><i class="far fa-trash-alt"></i></span> Buy Gift
+        </li>
+      </ul>
+    </div>
+
     <script type="text/javascript" src="js/todos.js"></script>
   </body>
 </html>
