minor bug fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <div id="container">
-      <h1>ToDo List<i class="fas fa-pencil-alt"></i></h1>
+      <h1>
+        ToDo List<span id="toggle-form"><i class="fas fa-pencil-alt"></i></span>
+      </h1>
       <input type="text" placeholder="Add New ToDo" />
 
       <ul>
